--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,91 @@
- .col{
-	 float: left;
-	 width: 25%;
- }
-.row:after{
-	content: "";
-	display: inline;
-	clear: both;
+.headernav {
+  position: absolute;
+  left: 2%;
+}headernav {
+  position: absolute;
+  left: 2%;
 }
-#row1{
-	display: inline;
+body{
+  overflow-x: hidden;
 }
-.jumbotron{
-	background-image: url("../img/landing.jpg");
+.bg-image {
+  width: 100% ;
+  height: 500px;
+
+}
+
+.middle {
+  position: absolute;
+  margin-top: 100px;
+  left: 50%;
+  transform: translate(-50%, -160%);
+  padding-bottom: 10px;
+  color: white;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 350px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 42px;
+  text-decoration: none;
+}
+
+
+
+li a:hover {
+  background-color: #F15A29;
+  color: white;
+  text-decoration: none;
+
+}
+body{
+  overflow-x: hidden;
+}
+.bg-image {
+  width: 100% ;
+  height: 500px;
+
+}
+
+.middle {
+  position: absolute;
+  margin-top: 100px;
+  left: 50%;
+  transform: translate(-50%, -160%);
+  padding-bottom: 10px;
+  color: white;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 350px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 42px;
+  text-decoration: none;
+}
+
+
+
+li a:hover {
+  background-color: #F15A29;
+  color: white;
+  text-decoration: none;
+
 }
