--- a/css/styles.css
+++ b/css/styles.css
@@ -89,3 +89,112 @@ li a:hover {
   text-decoration: none;
 
 }
+
+#fastfood {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.txt-white {
+  color: #FFF;
+}
+
+.breakfast {
+  text-align: center;
+}
+
+#b-fast:hover {
+  bottom: 0;
+  right: 0;
+  background: rgba(250, 250, 250, 0.5);
+  opacity: 0.5;
+  color: black;
+  overflow: hidden;
+  transition: .5s ease;
+}
+
+.lunch {
+  text-align: center;
+}
+
+#lunch:hover {
+  bottom: 0;
+  right: 0;
+  background: rgba(250, 250, 250, 0.5);
+  opacity: 0.5;
+  color: black;
+  overflow: hidden;
+  transition: .5s ease;
+}
+
+.dinner {
+  text-align: center;
+}
+
+#dinner:hover {
+  bottom: 0;
+  right: 0;
+  background: rgba(250, 250, 250, 0.5);
+  opacity: 0.5;
+  color: black;
+  overflow: hidden;
+  transition: .5s ease;
+}
+
+.carousel {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 50px;
+  background-image: url(images/foodsBg.jpg);
+  background-attachment: fixed;
+  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.email_section {
+  text-align: center;
+  padding: 70px;
+  background-attachment: fixed;
+}
+
+.footer-menu {
+  padding: 20px;
+  background-color: red;
+  text-align: center;
+  background-color: #F15B29;
+}
+
+.images {
+  border-style: solid;
+  border-color: #FFFFFF;
+  border-width: 20px;
+  box-shadow: 0 0 6px 6px #F2F2F2;
+}
+
+.footer-menu {
+  padding: 20px;
+  background-color: red;
+  text-align: center;
+  background-color: #F15B29;
+}
+
+.email_section {
+  text-align: center;
+  background-image: url(../images/subscribe.jpg);
+  padding: 70px;
+  background-attachment: fixed;
+}
+
+.foodbar {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 50px;
+  background-image: url(../images/foodsBg.jpg);
+  background-attachment: fixed;
+  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
