--- a/css/styles.css
+++ b/css/styles.css
@@ -198,3 +198,123 @@ li a:hover {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px
+  }
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+div#panel{
+  height: 500px;
+  background-image: url("../images/foodsBg.jpg");
+  padding: 50px;
+      margin: 0px auto;
+      background-repeat: no-repeat;
+      background-size: cover;
+}
+
+
+.nav-tabs>li {
+	    float: left;
+	    margin-bottom: -1px;
+	    width: 25%;
+	    text-align: center;
+	}
+	div.patel{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: #e2521a;
+	}
+	a{
+		border: 0px;
+		font-weight: bold;
+	}
+	span#spanleft{
+		    position: absolute;
+    color: red;
+    font-size: 25px;
+    /* top: -5px; */
+    margin-top: 70px;
+    margin-left: -10px;
+	}
+	span#spanright{
+		    position: absolute;
+    font-size: 25px;
+    color: red;
+    margin-top: 70px;
+	}
+	div#divcover{
+
+		background-size: cover;
+		background-repeat: no-repeat;
+		padding: 50px;
+    margin: 0px auto;
+	}
+#customersection {
+  width: 100%;
+  height: 5px;
+}
+.one {
+  position: absolute;
+  top: 50%;
+  color: white;
+  font-size: 30px;
+  left: 30%;
+  text-decoration: none;
+}
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
